<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_player_one"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/player1score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_game_tic"
            android:textSize="30sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Title"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_player_two"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player2score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:layout_weight="0.3">
            <Button
                android:id="@+id/button_00"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_top_left_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_top_right_button"
                android:text=""
                android:onClick="onClick" />
        </TableRow>

        <TableRow
            android:layout_weight="0.3">
            <Button
                android:id="@+id/button_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_button"
                android:text=""
                android:onClick="onClick" />
        </TableRow>

        <TableRow
            android:layout_weight="0.3">
            <Button
                android:id="@+id/button_20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_bottom_left_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_button"
                android:text=""
                android:onClick="onClick" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tic_bottom_right_button"
                android:text=""
                android:onClick="onClick" />
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_game_tic"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="60sp" />

    </RelativeLayout>

</LinearLayout>

